<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/background_cardView"
    android:layout_marginVertical="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LayoutTexto"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recycleView_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="3dp"
                android:text="@string/remedio_cadastro"
                android:textColor="@color/text_color"
                android:textSize="15dp" />

            <LinearLayout
                android:id="@+id/LayoutHorario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:text="@string/horaio_list"
                    android:textColor="@color/text_color"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/recycleView_hora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:text="@string/hora_list"
                    android:textColor="@color/text_color"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/idRecycleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="4dp"
                    android:textSize="15dp"
                    android:text="@string/id_list" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:text="@string/lembrete_list"
                    android:textColor="@color/text_color"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/recycleView_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:text="@string/data_list"
                    android:textColor="@color/text_color"
                    android:textSize="15dp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutBotao"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/recycleView_btEdit"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_button_salvar"
                app:srcCompat="@drawable/ic_baseline_edit_botao" />

            <ImageButton
                android:id="@+id/recycleView_btDelete"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_button_cancelar"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_delete_botao" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>