<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".fragment.FragmentCadastroRemedio">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/remedio_cadastro" />

    <EditText
        android:id="@+id/nomeMedicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/black"
        android:background="@drawable/style"
        android:padding="3dp"
        android:text=""
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/horario_cadastro" />

    <TextView
        android:id="@+id/horaRemedio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:background="@drawable/style"
        android:padding="3dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/frequencia_cadastro" />


    <Spinner
        android:id="@+id/frequenciaMedicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_spinner"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/horario1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginVertical="4dp"
            android:background="@color/background_color"
            android:gravity="center"
            android:textColor="@color/black"
            android:elevation="5dp"
            android:text="@string/hora_cadastro" />

        <TextView
            android:id="@+id/horario2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="4dp"
            android:background="@color/background_color"
            android:gravity="center"
            android:textColor="@color/black"
            android:elevation="5dp"
            android:text="@string/hora_cadastro" />

        <TextView
            android:id="@+id/horario3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="4dp"
            android:background="@color/background_color"
            android:gravity="center"
            android:textColor="@color/black"
            android:elevation="5dp"
            android:text="@string/hora_cadastro" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/horario4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginVertical="4dp"
            android:background="@color/background_color"
            android:gravity="center"
            android:elevation="5dp"
            android:text="@string/hora_cadastro"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/horario5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:layout_marginVertical="4dp"
            android:background="@color/background_color"
            android:gravity="center"
            android:elevation="5dp"
            android:text="@string/hora_cadastro"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/horario6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="@color/background_color"
            android:gravity="center"
            android:elevation="5dp"
            android:text="@string/hora_cadastro"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/agenda_cadastro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="@string/data_cadastro"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dataFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:background="@drawable/style"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btCancela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button_cancelar"
            android:text="@string/bt_cancelar"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSalva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button_salvar"
            android:text="@string/bt_salvar"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>